Fixed overflow of lesion upload file name

--- a/megatrack/static/css/core/lesion-mapping.css
+++ b/megatrack/static/css/core/lesion-mapping.css
@@ -192,7 +192,11 @@
     float: left;
     text-align: left;
     margin-left: 15px;
-    padding-top: 5px;
+    margin-top: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    height: 20px;
 }
 
 #upload-form-submit {
